cmake_minimum_required(VERSION 3.3)

SET(EXECUTABLE_OUTPUT_PATH ../../bin)

FIND_PACKAGE(libuvc REQUIRED)

INCLUDE_DIRECTORIES(SYSTEM ${libuvc_INCLUDE_DIRS})

add_executable(rTests tests.cpp rTests.h)

TARGET_LINK_LIBRARIES(rTests ${libuvc_LIBRARIES})
TARGET_LINK_LIBRARIES(rTests rCamera)
TARGET_LINK_LIBRARIES(rTests rMotors)
TARGET_LINK_LIBRARIES(rTests rProtocols)
TARGET_LINK_LIBRARIES(rTests rSensors)
TARGET_LINK_LIBRARIES(rTests rWifi)
TARGET_LINK_LIBRARIES(rTests rPowerSystems)